<resources>
    <string name="app_name">Learning-Ness</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_credentials">Username and password must not be empty!</string>
    <string name="user_doesnt_exists">This user doesn\'t exists!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_now">Register now!</string>
    <string name="password_not_match">Passwords must be the same!</string>
    <string name="admin_rights">Admin rights</string>
    <string name="favorite_courses">Favorite courses</string>
    <string name="registered_when">Registered at</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account">Delete account</string>
    <string name="or">or</string>
    <string name="want_to_delete_account">Do you want to delete your account?</string>
    <string name="see_by_categories">See by categories</string>
    <string name="certificated">Certificated</string>
    <string name="you_do_not_have_any_favorite_course_yet">You do not have any favorite course yet!</string>
    <string name="categories">Categories</string>
    <string name="start_learning">Start learning</string>
    <string name="certificate_finished_message">Done! I want the certificate.</string>
    <string name="certificate_terms">You must agree our terms and conditions for the certificate to be acquired.\nBy checking this you will be given the course certificate. The certificate is available on all skills requirements.</string>
    <string name="acquire_certificate">Acquire certificate</string>
    <string name="certificate_acquired">Certificate acquired!</string>
    <string name="terms_and_cond_not_checked">You must agree conditions to acquire the certificate.</string>
    <string name="tutorial_section_title">Certificates</string>
    <string name="favorite_section_title">Favorites</string>
</resources>
