<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/app_primary_color_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:animateLayoutChanges="true"
            android:elevation="12dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_user_pic"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_boy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_settings_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_user_pic"
                    tools:text="Username" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_admin_rights"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_checked_green_24dp"
                    android:drawableRight="@drawable/ic_checked_green_24dp"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/admin_rights"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_settings_username" />

                <View
                    android:id="@+id/view_separator_admin"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_admin_rights" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_fav_courser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_error"
                    android:drawableRight="@drawable/ic_error"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/favorite_courses"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_separator_admin" />

                <View
                    android:id="@+id/view_separator_fav_courses"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_fav_courser" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_account_date_registered_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/registered_when"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_separator_fav_courses" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_registered_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@id/tv_account_date_registered_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_account_date_registered_label"
                    tools:text="12/3/06" />

                <View
                    android:id="@+id/view_separator_registered"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_account_date_registered_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_settings_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_question"
                    android:drawableRight="@drawable/ic_question"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/help"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_separator_registered" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_settings_or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_settings_help"
                    app:rippleColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_settings_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/or"
                    android:textSize="19sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_logout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    app:backgroundTint="@color/red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_settings_or"
                    app:rippleColor="@color/black" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>